--- a/EnergyTest/EnergyTest.csproj
+++ b/EnergyTest/EnergyTest.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CsharpRAPL" Version="0.2.12" />
+      <PackageReference Include="CsharpRAPL" Version="1.3.16" />
+      <PackageReference Include="IPC.NamedPipe" Version="0.9.3" />
+      <PackageReference Include="SocketComm" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
