adjust LoopIterations.cs

--- a/CSIPC/CSIPC.csproj
+++ b/CSIPC/CSIPC.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="SocketComm" Version="1.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\EnergyTest\EnergyTest.csproj" />
+    </ItemGroup>
+
 </Project>
